<resources>
    <string name="app_name">Ins</string>
    <string name="invalid_msg">INVALID INPUT</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="txt">text</string>
    <string name="password">Password</string>
    <string name="enter_email">PLEASE ENTER YOUR EMAIL</string>
    <string name="enter_password">PLEASE ENTER YOUR PASSWORD</string>
    <string name="register_form">Register Form</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="enter_username">PLEASE ENTER YOUR USERNAME</string>
    <string name="search">Search</string>
    <string name="title_activity_bluetooth_dialog">BluetoothDialog</string>
    <string name="title_activity_home_maue">HomeMaue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_comments">comments</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
