<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/round_rectangle_shadow"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="55dp"
        android:paddingRight="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/instagram_logo" />

        <com.example.zhongzhoujianshe.ins.MyWidget.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            app:input_hint="@string/email"
            app:input_type="@string/email"
            app:left_icon="@string/icon_email"
            app:top_note_normal="@string/enter_email"
            app:top_title="@string/email" />


        <com.example.zhongzhoujianshe.ins.MyWidget.MyEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            app:input_hint="@string/password"
            app:input_type="@string/password"
            app:left_icon="@string/icon_password"
            app:top_note_normal="@string/enter_password"
            app:top_title="@string/password" />


        <com.example.zhongzhoujianshe.ins.MyWidget.MyRoundCornerButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textColor="@color/light_gray"
            android:textSize="16dp" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please wait..."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:id="@+id/pleaseWait"/>



</RelativeLayout>